small fixes for items alignment

--- a/client/src/share/components/LeftColumn/LeftColumn.css
+++ b/client/src/share/components/LeftColumn/LeftColumn.css
@@ -6,12 +6,11 @@
   height: 100vh;
   padding-left: 24px;
   border-right: 1px solid rgb(238, 232, 232);
-  border: 1px solid rgb(16, 16, 16);
 }
 
 @media (max-width: 1300px) {
   .leftcol__container {
-    width: 50px;
+    width: 70px;
     padding-left: 0;
   }
 }
